# player

./: CMakeLists.txt  main.cpp  makefile
src/player/: player.cpp  player.h  stream_parse.cpp  stream_parse.h
src/player/Decode/: AudioDecoder.cpp  AudioDecoder.h  VideoDecoder.cpp  VideoDecoder.h  decoder.cpp  decoder.h  decoder_struct.h
src/player/Decode/android/: MediaDecoder.cpp  MediaDecoder.h
src/player/Decode/ios/: AudioHardwareDecoder.cpp  AudioHardwareDecoder.h  VideoHardwareDecoder.cpp  VideoHardwareDecoder.h
src/player/Display/: GLRender.cpp  GLRender.h
src/player/Display/MacOS/: MacAudioPlayer.cpp  MacAudioPlayer.h
src/player/MessageQueue/: message_queue.cpp  message_queue.h  xq_packet_queue.cpp  xq_packet_queue.h
src/player/SDL/: SDL_AudioPlayer.cpp  SDL_AudioPlayer.h
